nhso-4107: Sprint bug - Snapping issues - left alignment - especially in IE11

--- a/web/src/style/_main.scss
+++ b/web/src/style/_main.scss
@@ -95,9 +95,3 @@ main.content {
 		padding: 0 16px;
 	}
 }
-
-@media (min-width: 1024px) {
-	main.content {
-		margin: 0 auto;
-	}
-}
